# mist-firmware-rp2040

./: .gitmodules  build.sh  changelog.txt  mkrelease.sh
contrib/tusb_xinput/: xinput_host.c  xinput_host.h
docker/: Dockerfile  build.sh  pico_setup.sh  usbh.c
docker-alpine/: Dockerfile  build.sh  pico_setup.sh  startup.sh  usbh.c
docker/cdc/: cdc_host.c
drivers/: audio_i2s.c  audio_i2s.h  audio_i2s.pio  audio_i2s_zx1.pio  audio_not_i2s.pio  bitfile.c  bitfile.h  bitstore.c  bitstore.h  cookie.c  cookie.h  crc16.c  crc16.h  crcchk.c  debug.c  debug.h  fifo.c  fifo.h  flash.c  flash.h  fpga.c  fpga.h  fpga.pio  fpgasupp.c  gpioirq.c  gpioirq.h  ipc.c  ipc.h  jamma.c  jamma.h  jamma.pio  jammadb9.pio  jammaj.pio  jtag.c  jtag.h  kbd.c  kbd.h  keymap.h  midi.c  midi.h  (+13 more)
drivertest/: CMakeLists.txt  build.sh  drivertest.c  sine_wave.c
picosynth/: picosynthversion.h  wtsynth.h
rp2u-build/: CMakeLists.txt  build.sh  rp2u.c  version.h
stubs/: Makefile  at91sam_usb.h  attrs.h  glue.c  glueemu.c  hardware.c  hardware.h  mkcardpt.sh  mmc.c  mmcemu.c  screen.c  screen.h  spi.c  spi.h  spiemu.c  usbdev.c  usbdevx.c  usbemu.c  usbfake.c  usbstub.c  usbx.h
testcores/pong/: mist.xdc  pines_zxtres.xdc  pllxilinx.v  pong.xpr  run.sh  zx3top.v
testcores/spectrum/: 128x.hex  48x.hex  data_io.v  mist.xdc  neptuno2.qpf  neptuno2.qsf  neptuno2_top.v  pines_zxtres.xdc  pll25.v  pll_main.vhd  pllxilinx.v  pllxilinx_zx1.v  rom128x.v  rom48x.v  run.sh  spectrum.xpr  spectrum_mist_zx1.vhd  zx3top.v  zxspectrum.xise  zxuno.ucf
tools/: Makefile  mkimage.c  mkuf2.c
usbhost/: CMakeLists.txt  build.sh  cdc_app.c  hid_app.c  hid_app_jammaemu.c  hid_app_mist.c  hiddev.h  joypad.c  joypad.h  main.c  msc_app.c  parserpt.c  readme.txt  tusb_config.h  usbdev.c  usbdev.h  usbhost.h  xinput.c
